--- a/README
+++ b/README
@@ -1,12 +1,12 @@
-web is the Go toolkit for web services.
+web is the Go toolkit for web services:
 
-Included packages:
+* messages
 
-messages
-|   Package messages provides a declarative and composable
-|   structure for defining HTTP responses in Go.
+	Package messages provides a declarative and composable
+	structure for defining HTTP responses in Go.
 
-middleware
-|   Package middleware provides composable HTTP middleware
-|   for use with net/http. It includes utilities for panic
-|   recovery, access logging, and middleware chaining.
+* middleware
+
+	Package middleware provides composable HTTP middleware
+	for use with net/http. It includes utilities for panic
+	recovery and access logging.
